<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/New_workspace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/no_image"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_bg"
        android:layout_marginBottom="20dp"
        android:hint="@string/Company"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_bg"
        android:layout_marginBottom="20dp"
        android:hint="@string/Address"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_bg"
        android:layout_marginBottom="20dp"
        android:hint="@string/Email"
        />


    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_bg"
        android:layout_marginBottom="20dp"
        android:hint="@string/Phone"
        />

    <EditText
        android:id="@+id/employee"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_bg"
        android:layout_marginBottom="20dp"
        android:hint="@string/Number_of_employees"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Create_new"
        android:background="@drawable/button_bg"
        android:layout_marginTop="16dp"
        />

</LinearLayout>